--- a/quakeroach-blog-frontend/src/layouts/MainLayout.css
+++ b/quakeroach-blog-frontend/src/layouts/MainLayout.css
@@ -12,3 +12,15 @@
   display: flex;
   flex-direction: row-reverse;
 }
+
+.main-layout-navbar .button {
+  margin-bottom: 0;
+}
+
+.main-layout-navbar-left > .button {
+  margin-right: 0;
+}
+
+.main-layout-navbar-right > .button {
+  margin-left: 0;
+}
